--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(plotTrendCurve)
 export(plotWeighted)
+export(prettyTable)
 export(queryChatGpt)
 export(readCensorWindow)
 export(readCohortExit)
