--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(plotTrendCurve)
 export(plotWeighted)
 export(prettyTable)
 export(queryChatGpt)
+export(rOhdsiWebApiConceptSetDetails)
 export(readCensorWindow)
 export(readCohortExit)
 export(readCohortGeneratorOutput)
