--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(compareLists)
 export(compareTibbles)
 export(consolidateCohortGeneratorOutput)
 export(consolidateFeatureExtractionOutput)
+export(convertDateToRange)
 export(createConnectionDetails)
 export(createFeatureExtractionReport)
 export(createGoodCohortNames)
@@ -28,6 +29,7 @@ export(getCdmSource)
 export(getClinicalDescriptonFromChatGpt)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
+export(getCohortPeriods)
 export(getCohortStatsFix)
 export(getContinuousPriorObservationPeriodRequirement)
 export(getDomainsInEntryEvents)
