--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(executeCohortGeneration)
 export(executeCohortGenerationInParallel)
 export(executeConceptCovariateCharacterization)
 export(executeConceptCovariateCharacterizationInParallel)
+export(executeConceptRecordCountInParallel)
 export(fetchGitHubRepoReleaseInfo)
 export(generateRandomString)
 export(getCdmSource)
