--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(executeConceptCovariateCharacterization)
 export(executeConceptCovariateCharacterizationInParallel)
 export(executeConceptRecordCountInParallel)
 export(fetchGitHubRepoReleaseInfo)
+export(filterDataFrame)
 export(generateRandomString)
 export(getCdmSource)
 export(getClinicalDescriptonFromChatGpt)
@@ -60,7 +61,7 @@ export(parsePhenotypeLibraryDescription)
 export(percentFormat)
 export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
-export(prettyTable)
+export(prettyReportKabbleTable)
 export(queryChatGpt)
 export(rOhdsiWebApiConceptSetDetails)
 export(readCensorWindow)
