--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(addCdmSourceBySourceKey)
 export(areCohortEventsRestrictedByVisit)
 export(authorizeToJnjAtlas)
 export(authorizeToOhdsiPlAtlas)
+export(authorizeToWebApi)
 export(checkIfObjectExistsInNestedList)
 export(compareLists)
 export(compareTibbles)
