--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(formatDecimalWithComma)
 export(formatIntegerWithComma)
 export(formatMeanSd)
 export(formatPercent)
+export(generateCombinationsDataFrame)
 export(generateRandomString)
 export(getCdmSource)
 export(getClinicalDescriptonFromChatGpt)
@@ -54,6 +55,7 @@ export(getNumberOfConceptSets)
 export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
+export(getTargetCohortToFeatureCohortTemporalRelationship)
 export(getUnitConceptIdSummary)
 export(getUsCensusEstimates)
 export(getWhereAnObjectExistsInNestedList)
@@ -85,6 +87,7 @@ export(splitDataFrameField)
 export(stringPresentInCohortDefinitionText)
 export(traverseList)
 export(updateSqlInCohortDefinitionSet)
+export(uploadToPostgres)
 import(DatabaseConnector)
 import(dplyr)
 importFrom(rlang,.data)
