--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(modifyCollapseSettings)
 export(normalizeFilePath)
 export(parseCohortDefinitionSpecifications)
 export(parsePhenotypeLibraryDescription)
+export(performConceptSetDiagnostics)
 export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
