--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(readOutput)
 export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
 export(removeUnWantedSpace)
+export(reportOnConceptRecordCount)
 export(saveCandidateCohortData)
 export(splitDataFrameField)
 export(stringPresentInCohortDefinitionText)
