--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,8 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
 export(queryChatGpt)
+export(queryOhdsiResultsCohortCounts)
+export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
 export(readCensorWindow)
 export(readCohortExit)
