--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,13 @@ export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
 export(removeUnWantedSpace)
 export(reportOnConceptRecordCount)
+export(resultsExtractCohortDiagnosticsAll)
+export(resultsExtractCohortDiagnosticsCharacterization)
+export(resultsExtractCohortDiagnosticsConceptsInCohort)
+export(resultsExtractCohortDiagnosticsDataSource)
+export(resultsExtractCohortDiagnosticsIncidenceRate)
+export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
+export(resultsExtractConnection)
 export(saveCandidateCohortData)
 export(splitDataFrameField)
 export(stringPresentInCohortDefinitionText)
