--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(formatPercent)
 export(generateCombinationsDataFrame)
 export(generateRandomString)
 export(getCdmSource)
+export(getCirceHumanReadableCohortText)
 export(getClinicalDescriptonFromChatGpt)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
@@ -83,6 +84,7 @@ export(readFeatureExtractionOutput)
 export(readOutput)
 export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
+export(removeTrailingCommas)
 export(removeUnWantedSpace)
 export(reportOnConceptRecordCount)
 export(resultsExtractCohortDiagnosticsAll)
