--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(removeUnWantedSpace)
 export(reportOnConceptRecordCount)
 export(resultsExtractCohortDiagnosticsAll)
 export(resultsExtractCohortDiagnosticsCharacterization)
+export(resultsExtractCohortDiagnosticsCohortOverlap)
 export(resultsExtractCohortDiagnosticsConceptsInCohort)
 export(resultsExtractCohortDiagnosticsDataSource)
 export(resultsExtractCohortDiagnosticsIncidenceRate)
