--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(compareTibbles)
 export(consolidateCohortGeneratorOutput)
 export(consolidateFeatureExtractionOutput)
 export(convertDateToRange)
+export(createCohortExplorerAppFromOutputs)
 export(createConnectionDetails)
 export(createFeatureExtractionReport)
 export(createGoodCohortNames)
