--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortPeriods)
 export(getCohortStatsFix)
+export(getCohortSubsetOperators)
 export(getContinuousPriorObservationPeriodRequirement)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
