--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(generateRandomString)
 export(getCdmSource)
 export(getCirceHumanReadableCohortText)
 export(getClinicalDescriptonFromChatGpt)
+export(getCohortCountAttritionWebApiGetCohortResultsOutput)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortPeriods)
