--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
 export(getTargetCohortToFeatureCohortTemporalRelationship)
+export(getTimeToNextCohortStart)
 export(getUnitConceptIdSummary)
 export(getUsCensusEstimates)
 export(getWhereAnObjectExistsInNestedList)
