--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(executeCohortGenerationInParallel)
 export(executeConceptCovariateCharacterization)
 export(executeConceptCovariateCharacterizationInParallel)
 export(executeConceptRecordCountInParallel)
+export(executeFeatureExtraction)
+export(executeFeatureExtractionInParallel)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
 export(formatCountPercent)
