--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(createCohortExplorerAppFromOutputs)
 export(createConnectionDetails)
 export(createFeatureExtractionReport)
 export(createGoodCohortNames)
+export(createNonTemporalCovariateSettings)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
 export(deletePheValuatorOutputs)
