--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(authorizeToWebApi)
 export(checkIfObjectExistsInNestedList)
 export(compareLists)
 export(compareTibbles)
+export(concatenteFeatureCohortSummaryToSubject)
 export(consolidateCohortGeneratorOutput)
 export(consolidateFeatureExtractionOutput)
 export(convertDateToRange)
