--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(createConnectionDetails)
 export(createFeatureExtractionReport)
 export(createGoodCohortNames)
 export(createNonTemporalCovariateSettings)
+export(createObservedPersonsCohort)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
 export(deletePheValuatorOutputs)
