--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(checkIfObjectExistsInNestedList)
 export(compareLists)
 export(compareTibbles)
 export(concatenteFeatureCohortSummaryToSubject)
+export(concatenteFeatureCohortSummaryToSubjectInParallel)
 export(consolidateCohortGeneratorOutput)
 export(consolidateFeatureExtractionOutput)
 export(convertDateToRange)
