--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(createFeatureExtractionReport)
 export(createGoodCohortNames)
 export(createNonTemporalCovariateSettings)
 export(createObservedPersonsCohort)
+export(createObservedPersonsCohortInParallel)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
 export(deletePheValuatorOutputs)
@@ -96,6 +97,7 @@ export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
 export(removeTrailingCommas)
 export(removeUnWantedSpace)
+export(renderTranslateExecuteSqlInParallel)
 export(reportOnConceptRecordCount)
 export(resultsExtractCohortDiagnosticsAll)
 export(resultsExtractCohortDiagnosticsCharacterization)
