--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ export(executeCohortCovariateCharacterization)
 export(executeCohortCovariateCharacterizationInParallel)
 export(executeCohortDiagnosticsInParallel)
 export(executeCohortExplorerInParallel)
+export(executeCohortFeatureExtraction)
+export(executeCohortFeatureExtractionInParallel)
 export(executeCohortGeneration)
 export(executeCohortGenerationInParallel)
 export(executeConceptCovariateCharacterization)
