--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(authorizeToWebApi)
 export(checkIfObjectExistsInNestedList)
 export(compareLists)
 export(compareTibbles)
+export(computeCohortTemporalRelationship)
 export(concatenteFeatureCohortSummaryToSubject)
 export(concatenteFeatureCohortSummaryToSubjectInParallel)
 export(consolidateCohortGeneratorOutput)
