--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(getCohortPeriods)
 export(getCohortStatsFix)
 export(getCohortSubsetOperators)
 export(getContinuousPriorObservationPeriodRequirement)
+export(getCovaraiteDataSummaryByTimeId)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
 export(getDrugExposureUtilizationSummary)
