--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
+export(deleteInstantiatedCohortsInParrallel)
 export(deletePheValuatorOutputs)
 export(executeCohortCovariateCharacterization)
 export(executeCohortCovariateCharacterizationInParallel)
@@ -56,6 +57,7 @@ export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortPeriods)
 export(getCohortStatsFix)
 export(getCohortSubsetOperators)
+export(getCohortTemporalOverlap)
 export(getContinuousPriorObservationPeriodRequirement)
 export(getCovaraiteDataSummaryByTimeId)
 export(getDomainsInEntryEvents)
