--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
 export(removeTrailingCommas)
 export(removeUnWantedSpace)
+export(renderQuerySqlInParallel)
 export(renderTranslateExecuteSqlInParallel)
 export(reportOnConceptRecordCount)
 export(resultsExtractCohortDiagnosticsAll)
