--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(consolidateCohortGeneratorOutput)
 export(consolidateFeatureExtractionOutput)
 export(convertDateToRange)
 export(createCohortExplorerAppFromOutputs)
+export(createCombinations)
 export(createConnectionDetails)
 export(createFeatureExtractionReport)
 export(createGoodCohortNames)
