--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
 export(getTargetCohortToFeatureCohortTemporalRelationship)
+export(getTemporalDays)
 export(getTimeToNextCohortStart)
 export(getUnitConceptIdSummary)
 export(getUsCensusEstimates)
