--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(getCovaraiteDataSummaryByTimeId)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
 export(getDrugExposureUtilizationSummary)
+export(getDummyCohortDefinitionSet)
 export(getInclusionRuleQualifyingEventLimit)
 export(getInitialEventLimit)
 export(getInitialEventRestrictionAdditionalCriteriaLimit)
