--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
 export(deleteInstantiatedCohortsInParrallel)
 export(deletePheValuatorOutputs)
+export(dropCohortTablesInParallel)
 export(executeCohortCovariateCharacterization)
 export(executeCohortCovariateCharacterizationInParallel)
 export(executeCohortDiagnosticsInParallel)
