--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(getCdmSource)
 export(getCirceHumanReadableCohortText)
 export(getClinicalDescriptonFromChatGpt)
 export(getCohortCountAttritionWebApiGetCohortResultsOutput)
+export(getCohortCountsInParallel)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortPeriods)
@@ -119,6 +120,8 @@ export(resultsExtractCohortDiagnosticsIncidenceRate)
 export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
 export(resultsExtractConnection)
 export(saveCandidateCohortData)
+export(saveDataFrameToExcel)
+export(splitAndNameColumns)
 export(splitDataFrameField)
 export(stringPresentInCohortDefinitionText)
 export(traverseList)
