--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(deleteCohortExplorerOutputs)
 export(deleteInstantiatedCohortsInParrallel)
 export(deletePheValuatorOutputs)
 export(dropCohortTablesInParallel)
+export(duplicateCovariateDataObjects)
 export(editCohortGeneratorIncrementalLog)
 export(executeCohortDiagnosticsInParallel)
 export(executeCohortExplorerInParallel)
