--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(convertDateToRange)
 export(createCohortExplorerAppFromOutputs)
 export(createCombinations)
 export(createConnectionDetails)
+export(createFeatureExtractionWideReportTemporalCovariateData)
 export(createGoodCohortNames)
 export(createNonTemporalCovariateSettings)
 export(createObservedPersonsCohort)
