--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,8 +123,8 @@ export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
 export(resultsExtractConnection)
 export(saveCandidateCohortData)
 export(saveDataFrameToExcel)
-export(splitAndNameColumns)
 export(splitDataFrameField)
+export(splitStringAndRenameColumns)
 export(stringPresentInCohortDefinitionText)
 export(traverseList)
 export(updateSqlInCohortDefinitionSet)
