--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(createTable1FromCovariateData)
 export(createTable1FromCovariateDataInParallel)
+export(createTable1SpecificationsFromCovariateData)
 export(createTable1SpecificationsRow)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
