--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(executeConceptCovariateCharacterizationInParallel)
 export(executeConceptRecordCountInParallel)
 export(executeFeatureExtraction)
 export(executeFeatureExtractionInParallel)
+export(exportCohortCountAttritionFunnelTableFromWebApi)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
 export(formatCountPercent)
