--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(createCohortExplorerAppFromOutputs)
 export(createCombinations)
 export(createConnectionDetails)
 export(createFeatureExtractionNonTemporalCovariateSettings)
+export(createFeatureExtractionReportByTimeWindows)
 export(createFeatureExtractionReportInParallel)
 export(createFeatureExtractionWideReportTemporalCovariateData)
 export(createGoodCohortNames)
