--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(parsePhenotypeLibraryDescription)
 export(performConceptSetDiagnostics)
 export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
+export(prepareEventDistributionDataForViolinPlots)
 export(prettyReportKabbleTable)
 export(queryChatGpt)
 export(quoteLiterals)
