--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,13 +59,19 @@ export(generateRandomString)
 export(getCdmSource)
 export(getCirceHumanReadableCohortText)
 export(getClinicalDescriptonFromChatGpt)
+export(getCohortAttritionViewResults)
+export(getCohortCensorStatsInParallel)
 export(getCohortCountAttritionWebApiGetCohortResultsOutput)
+export(getCohortCountsAndInclusionRulesInParallel)
 export(getCohortCountsInParallel)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
+export(getCohortIncStatsInParallel)
+export(getCohortInclusionResultsInParallel)
 export(getCohortPeriods)
 export(getCohortStatsFix)
 export(getCohortSubsetOperators)
+export(getCohortSummaryStatsInParallel)
 export(getCohortTemporalRelationshipByDay)
 export(getCohortTemporalRelationshipByDayInParrallel)
 export(getContinuousPriorObservationPeriodRequirement)
