--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortIncStatsInParallel)
 export(getCohortInclusionResultsInParallel)
+export(getCohortIntersectViewResults)
 export(getCohortPeriods)
 export(getCohortStatsFix)
 export(getCohortSubsetOperators)
@@ -77,6 +78,7 @@ export(getCohortTemporalRelationshipByDayInParrallel)
 export(getContinuousPriorObservationPeriodRequirement)
 export(getCovaraiteDataSummaryByTimeId)
 export(getCovariateCoOccurrence)
+export(getDefaultCovariateSettings)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
 export(getDrugExposureUtilizationSummary)
