--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(areCohortEventsRestrictedByVisit)
 export(authorizeToJnjAtlas)
 export(authorizeToOhdsiPlAtlas)
 export(authorizeToWebApi)
+export(calculateSummaryStatistics)
 export(checkFilterTemporalCovariateDataByTimeIdCohortId)
 export(checkIfObjectExistsInNestedList)
 export(compareLists)
@@ -32,11 +33,13 @@ export(createTable1SpecificationsFromCovariateData)
 export(createTable1SpecificationsRow)
 export(deleteCohortDiagnosticsOutputs)
 export(deleteCohortExplorerOutputs)
+export(deleteCohortRecordsFromCohortTableInParallel)
 export(deleteInstantiatedCohortsInParrallel)
 export(deletePheValuatorOutputs)
 export(dropCohortTablesInParallel)
 export(duplicateCovariateDataObjects)
 export(editCohortGeneratorIncrementalLog)
+export(editCohortGeneratorIncrementalLogInParallel)
 export(executeCohortDiagnosticsInParallel)
 export(executeCohortExplorerInParallel)
 export(executeCohortGeneration)
