--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(createFeatureExtractionWideReportTemporalCovariateData)
 export(createGoodCohortNames)
 export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
+export(createPheValuatorAnalysisList)
 export(createTable1FromCovariateData)
 export(createTable1FromCovariateDataInParallel)
 export(createTable1SpecificationsFromCovariateData)
