--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(createGoodCohortNames)
 export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(createPheValuatorAnalysisList)
+export(createStateCohortDefinitionSet)
 export(createTable1FromCovariateData)
 export(createTable1FromCovariateDataInParallel)
 export(createTable1SpecificationsFromCovariateData)
