--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(createFeatureExtractionReportByTimeWindows)
 export(createFeatureExtractionReportInParallel)
 export(createFeatureExtractionWideReportTemporalCovariateData)
 export(createGoodCohortNames)
+export(createObservationPeriodCohortDefinitionSet)
 export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(createPheValuatorAnalysisList)
