--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(createFeatureExtractionReportInParallel)
 export(createFeatureExtractionWideReportTemporalCovariateData)
 export(createGoodCohortNames)
 export(createObservationPeriodCohortDefinitionSet)
+export(createObservedOnDateCohortDefinitionSet)
 export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(createPheValuatorAnalysisList)
