--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,6 @@ export(checkFilterTemporalCovariateDataByTimeIdCohortId)
 export(checkIfObjectExistsInNestedList)
 export(compareLists)
 export(compareTibbles)
-export(concatenteFeatureCohortSummaryToSubject)
-export(concatenteFeatureCohortSummaryToSubjectInParallel)
 export(consolidateCohortGeneratorOutput)
 export(convertCohortIdToCovariateId)
 export(convertDateToRange)
@@ -48,8 +46,6 @@ export(executeCohortDiagnosticsInParallel)
 export(executeCohortExplorerInParallel)
 export(executeCohortGeneration)
 export(executeCohortGenerationInParallel)
-export(executeConceptCovariateCharacterization)
-export(executeConceptCovariateCharacterizationInParallel)
 export(executeConceptRecordCountInParallel)
 export(executeFeatureExtraction)
 export(executeFeatureExtractionInParallel)
@@ -98,6 +94,8 @@ export(getNumberOfConceptSets)
 export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
+export(getSubsetOperatorEnM)
+export(getSubsetOperatorsStandard)
 export(getTargetCohortToFeatureCohortDateDifferenceDistribution)
 export(getTargetCohortToFeatureCohortDateDifferenceDistributionInParrallel)
 export(getTemporalDays)
