--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,13 +72,13 @@ export(getCohortStatsFix)
 export(getCohortSubsetOperators)
 export(getCohortSummaryStatsInParallel)
 export(getContinuousPriorObservationPeriodRequirement)
-export(getCovaraiteDataSummaryByTimeId)
 export(getCovariateCoOccurrence)
 export(getDefaultCovariateSettings)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
 export(getDrugExposureUtilizationSummary)
 export(getDummyCohortDefinitionSet)
+export(getFeatureExtractionReportCommonSequentialTimePeriods)
 export(getInclusionRuleQualifyingEventLimit)
 export(getInitialEventLimit)
 export(getInitialEventRestrictionAdditionalCriteriaLimit)
@@ -139,6 +139,7 @@ export(saveDataFrameToExcel)
 export(splitDataFrameField)
 export(splitStringAndRenameColumns)
 export(stringPresentInCohortDefinitionText)
+export(timeToFeature)
 export(traverseList)
 export(updateSqlInCohortDefinitionSet)
 export(uploadToPostgres)
