--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(getCohortCensorStatsInParallel)
 export(getCohortCountAttritionWebApiGetCohortResultsOutput)
 export(getCohortCountsAndInclusionRulesInParallel)
 export(getCohortCountsInParallel)
+export(getCohortDiagnosticsIncidenceRate)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortIncStatsInParallel)
