--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(getCohortCountAttritionWebApiGetCohortResultsOutput)
 export(getCohortCountsAndInclusionRulesInParallel)
 export(getCohortCountsInParallel)
 export(getCohortDiagnosticsIncidenceRate)
+export(getCohortDiagnosticsIncidenceRateInParallel)
 export(getCohortDiagnosticsSqlLiteConnection)
 export(getCohortDiagnosticsSqlLiteConnectionDetails)
 export(getCohortIncStatsInParallel)
