--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prepareTargetCohortToFeatureCohortDateDifferenceDistributionForVisualizations)
 export(prettyReportKabbleTable)
+export(processCohortDiagnosticsIncidenceRate)
 export(queryChatGpt)
 export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
