--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,8 @@ export(getFeatureExtractionReportByTimeWindows)
 export(getFeatureExtractionReportCommonSequentialTimePeriods)
 export(getFeatureExtractionReportInParallel)
 export(getFeatureExtractionReportNonTimeVarying)
+export(getFeatureExtractionStandardizedDifference)
+export(getFeatureExtractionStandardizedDifferenceInParallel)
 export(getInclusionRuleQualifyingEventLimit)
 export(getInitialEventLimit)
 export(getInitialEventRestrictionAdditionalCriteriaLimit)
