--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,8 @@ export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
 export(getSubsetOperatorEnM)
+export(getSubsetOperatorStage)
+export(getSubsetOperatorStagePattern)
 export(getSubsetOperatorsStandard)
 export(getTable1SpecificationsFromCovariateData)
 export(getTable1SpecificationsRow)
