--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,10 +70,13 @@ export(getCohortSubsetOperators)
 export(getCohortSummaryStatsInParallel)
 export(getContinuousPriorObservationPeriodRequirement)
 export(getCovariateCoOccurrence)
+export(getCovariateSettingsTimeWindows)
 export(getDomainsInEntryEvents)
 export(getDrugExposureUtilizationStrata)
 export(getDrugExposureUtilizationSummary)
 export(getDummyCohortDefinitionSet)
+export(getFeatureExtractionDefaultNonTimeVaryingCovariateSettings)
+export(getFeatureExtractionDefaultTemporalCohortCovariateSettings)
 export(getFeatureExtractionDefaultTemporalCovariateSettings)
 export(getFeatureExtractionDefaultTimeWindows)
 export(getFeatureExtractionNonTemporalCovariateSettings)
@@ -126,6 +129,7 @@ export(readCohortExit)
 export(readCohortGeneratorOutput)
 export(readCollapseSettings)
 export(readOutput)
+export(removeLeadingCharacters)
 export(removeStringWithinParenthesis)
 export(removeStringWithinSquareBracket)
 export(removeTrailingCommas)
