--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(getFeatureExtractionReportNonTimeVarying)
 export(getFeatureExtractionStandardizedDifference)
 export(getFeatureExtractionStandardizedDifferenceInParallel)
 export(getInclusionRuleQualifyingEventLimit)
+export(getIndexEventBreakdown)
 export(getInitialEventLimit)
 export(getInitialEventRestrictionAdditionalCriteriaLimit)
 export(getListOfDatabaseIds)
