--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,11 +42,13 @@ export(executeFeatureExtractionInParallel)
 export(exportCohortCountAttritionFunnelTableFromWebApi)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
+export(findClosestMatch)
 export(formatCountPercent)
 export(formatDecimalWithComma)
 export(formatIntegerWithComma)
 export(formatMeanSd)
 export(formatPercent)
+export(fuzzyStringJoinDataFrame)
 export(generateCombinationsDataFrame)
 export(generateRandomString)
 export(getCdmSource)
@@ -146,6 +148,7 @@ export(resultsExtractCohortDiagnosticsDataSource)
 export(resultsExtractCohortDiagnosticsIncidenceRate)
 export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
 export(resultsExtractConnection)
+export(runCohortAlgebraUnionInParallel)
 export(saveCandidateCohortData)
 export(saveDataFrameToExcel)
 export(splitDataFrameField)
