--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
 export(processCohortDiagnosticsIncidenceRate)
 export(queryChatGpt)
+export(quoteAndJoinArray)
 export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
 export(readCensorWindow)
