--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(authorizeToJnjAtlas)
 export(authorizeToOhdsiPlAtlas)
 export(authorizeToWebApi)
 export(calculateSummaryStatistics)
+export(capitalizeFirstLetter)
 export(checkIfObjectExistsInNestedList)
 export(commaSeparaedStringToIntArray)
 export(compareLists)
@@ -14,6 +15,7 @@ export(compareTibbles)
 export(consolidateCohortGeneratorOutput)
 export(convertCohortIdToCovariateId)
 export(convertDateToRange)
+export(convertSentenceToCamelCase)
 export(createCohortExplorerAppFromOutputs)
 export(createCombinations)
 export(createConnectionDetails)
@@ -74,8 +76,6 @@ export(getContinuousPriorObservationPeriodRequirement)
 export(getCovariateCoOccurrence)
 export(getCovariateSettingsTimeWindows)
 export(getDomainsInEntryEvents)
-export(getDrugExposureUtilizationStrata)
-export(getDrugExposureUtilizationSummary)
 export(getDummyCohortDefinitionSet)
 export(getFeatureExtractionDefaultNonTimeVaryingCovariateSettings)
 export(getFeatureExtractionDefaultTemporalCohortCovariateSettings)
@@ -88,6 +88,8 @@ export(getFeatureExtractionReportInParallel)
 export(getFeatureExtractionReportNonTimeVarying)
 export(getFeatureExtractionStandardizedDifference)
 export(getFeatureExtractionStandardizedDifferenceInParallel)
+export(getGpt35Response)
+export(getGpt4Response)
 export(getInclusionRuleQualifyingEventLimit)
 export(getIndexEventBreakdown)
 export(getInitialEventLimit)
@@ -124,7 +126,6 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
 export(processCohortDiagnosticsIncidenceRate)
-export(queryChatGpt)
 export(quoteAndJoinArray)
 export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
