--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,7 @@ export(getFeatureExtractionStandardizedDifference)
 export(getFeatureExtractionStandardizedDifferenceInParallel)
 export(getGpt35Response)
 export(getGpt4Response)
+export(getHtmlDocumentAsJson)
 export(getInclusionRuleQualifyingEventLimit)
 export(getIndexEventBreakdown)
 export(getInitialEventLimit)
@@ -101,6 +102,7 @@ export(getNumberOfConceptSets)
 export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
+export(getPdfDocumentAsJson)
 export(getSubsetOperatorEnM)
 export(getSubsetOperatorStage)
 export(getSubsetOperatorStagePattern)
