--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(addCdmSourceBySourceKey)
 export(addMultipleCohortSubsetDefinitions)
 export(areCohortEventsRestrictedByVisit)
+export(assignParentId)
 export(authorizeToJnjAtlas)
 export(authorizeToOhdsiPlAtlas)
 export(authorizeToWebApi)
@@ -144,6 +145,7 @@ export(removeUnWantedSpace)
 export(renderTranslateExecuteSqlInParallel)
 export(renderTranslateQuerySqlInParallel)
 export(reportOnConceptRecordCount)
+export(rescaleData)
 export(resultsExtractCohortDiagnosticsAll)
 export(resultsExtractCohortDiagnosticsCharacterization)
 export(resultsExtractCohortDiagnosticsCohortOverlap)
@@ -156,7 +158,6 @@ export(runCohortAlgebraUnionInParallel)
 export(saveCandidateCohortData)
 export(saveDataFrameToExcel)
 export(splitDataFrameField)
-export(splitStringAndRenameColumns)
 export(stringPresentInCohortDefinitionText)
 export(timeToFeature)
 export(traverseList)
