--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(convertSentenceToCamelCase)
 export(createCohortExplorerAppFromOutputs)
 export(createCombinations)
 export(createConnectionDetails)
+export(createDataTree)
 export(createGoodCohortNames)
 export(createObservationPeriodCohortDefinitionSet)
 export(createObservedOnDateCohortDefinitionSet)
@@ -129,6 +130,7 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
 export(processCohortDiagnosticsIncidenceRate)
+export(pubMedQuery)
 export(quoteAndJoinArray)
 export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
@@ -160,6 +162,7 @@ export(saveDataFrameToExcel)
 export(splitDataFrameField)
 export(stringPresentInCohortDefinitionText)
 export(timeToFeature)
+export(tracePaths)
 export(traverseList)
 export(updateSqlInCohortDefinitionSet)
 export(uploadToPostgres)
