--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(modifyCollapseSettings)
 export(normalizeFilePath)
 export(parseCohortDefinitionSpecifications)
 export(parsePhenotypeLibraryDescription)
+export(parsePubMedXML)
 export(performConceptSetDiagnostics)
 export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
