--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(executeConceptRecordCountInParallel)
 export(executeFeatureExtraction)
 export(executeFeatureExtractionInParallel)
 export(exportCohortCountAttritionFunnelTableFromWebApi)
+export(extractSectionsFromPmcXml)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
 export(findClosestMatch)
@@ -157,6 +158,7 @@ export(resultsExtractCohortDiagnosticsDataSource)
 export(resultsExtractCohortDiagnosticsIncidenceRate)
 export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
 export(resultsExtractConnection)
+export(retrievePMCXML)
 export(runCohortAlgebraUnionInParallel)
 export(saveCandidateCohortData)
 export(saveDataFrameToExcel)
@@ -168,5 +170,7 @@ export(traverseList)
 export(updateSqlInCohortDefinitionSet)
 export(uploadToPostgres)
 import(DatabaseConnector)
+import(XML)
 import(dplyr)
 importFrom(rlang,.data)
+importFrom(stringr,str_squish)
