--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,7 +44,7 @@ export(executeConceptRecordCountInParallel)
 export(executeFeatureExtraction)
 export(executeFeatureExtractionInParallel)
 export(exportCohortCountAttritionFunnelTableFromWebApi)
-export(extractSectionsFromPmcXml)
+export(extractXmlSections)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
 export(findClosestMatch)
@@ -106,6 +106,10 @@ export(getNumberOfInclusionRules)
 export(getOrcidDetails)
 export(getOrcidFromPhenotypeLog)
 export(getPdfDocumentAsJson)
+export(getPubMedArticleSummaries)
+export(getPubMedPmcIdFromPmId)
+export(getPubMedPmcIdsFromPmIds)
+export(getPubmQuerySearchString)
 export(getSubsetOperatorEnM)
 export(getSubsetOperatorStage)
 export(getSubsetOperatorStagePattern)
@@ -132,7 +136,6 @@ export(pheValuatorRenameEvaluationObjects)
 export(plotSmoothedTrendCurve)
 export(prettyReportKabbleTable)
 export(processCohortDiagnosticsIncidenceRate)
-export(pubMedQuery)
 export(quoteAndJoinArray)
 export(quoteLiterals)
 export(rOhdsiWebApiConceptSetDetails)
@@ -158,8 +161,12 @@ export(resultsExtractCohortDiagnosticsDataSource)
 export(resultsExtractCohortDiagnosticsIncidenceRate)
 export(resultsExtractCohortDiagnosticsIndexEventBreakdown)
 export(resultsExtractConnection)
-export(retrievePMCXML)
+export(retrieveAndSavePmcXmlForPmcIds)
+export(retrievePMCXMLUsingEasyPubMed)
+export(retrievePMCXMLUsingRentrez)
+export(retrievePMCXMLUsingTidyPmc)
 export(runCohortAlgebraUnionInParallel)
+export(runPubMedSearchToGetPmids)
 export(saveCandidateCohortData)
 export(saveDataFrameToExcel)
 export(splitDataFrameField)
@@ -170,7 +177,5 @@ export(traverseList)
 export(updateSqlInCohortDefinitionSet)
 export(uploadToPostgres)
 import(DatabaseConnector)
-import(XML)
 import(dplyr)
 importFrom(rlang,.data)
-importFrom(stringr,str_squish)
