--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(getFeatureExtractionReportInParallel)
 export(getFeatureExtractionReportNonTimeVarying)
 export(getFeatureExtractionStandardizedDifference)
 export(getFeatureExtractionStandardizedDifferenceInParallel)
+export(getFilesNamesThatMatchPattern)
 export(getGpt35Response)
 export(getGpt4Response)
 export(getHtmlDocumentAsJson)
