--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(executeConceptRecordCountInParallel)
 export(executeFeatureExtraction)
 export(executeFeatureExtractionInParallel)
 export(exportCohortCountAttritionFunnelTableFromWebApi)
+export(featureExtractionCleanCovariateName)
+export(featureExtractionTimeRefToName)
 export(fetchGitHubRepoReleaseInfo)
 export(filterDataFrame)
 export(findClosestMatch)
