--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(createObservedOnDateCohortDefinitionSet)
 export(createObservedPersonsCohort)
 export(createObservedPersonsCohortInParallel)
 export(createPheValuatorAnalysisList)
+export(createRProject)
 export(createStateCohortDefinitionSet)
 export(dropCohortTablesInParallel)
 export(editCohortGeneratorIncrementalLog)
