--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(createPheValuatorAnalysisList)
 export(createRProject)
 export(createStateCohortDefinitionSet)
 export(dropCohortTablesInParallel)
+export(dropTempTablesFromScratchDataBricks)
 export(editCohortGeneratorIncrementalLog)
 export(editCohortGeneratorIncrementalLogInParallel)
 export(executeCohortDiagnosticsInParallel)
